<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/base_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <com.cmcc.hyapps.andyou.widget.AutoScrollViewPager
            android:id="@+id/banner_pager"
            android:layout_width="match_parent"
            android:layout_height="175dp" />

        <com.cmcc.hyapps.andyou.widget.ScrollPoints
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/banner_pager"
            android:layout_marginBottom="16dp"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="11dp"
        android:background="@drawable/fg_bottom_shadow_index" />
    <LinearLayout
        android:id="@+id/scenery_detail_funcs"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:background="@color/base_bg"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/home_tab_road_condition"
                style="@style/home_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/fresh_live"
                android:text="@string/home_tab_road_condition" />

        </RelativeLayout>
        <!-- android:paddingLeft="@dimen/common_margin"-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/home_tab_live"
                style="@style/home_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/fresh_scenic"
                android:text="@string/home_tab_scenic_360" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/home_tab_strategy"
                style="@style/home_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/fresh_strategy"
                android:text="@string/home_tab_loacl_special" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/home_tab_nav"
                style="@style/home_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/fresh_enjoy"
                android:text="@string/home_tab_enjoy" />
        </RelativeLayout>


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:background="@drawable/fg_bottom_shadow_index" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/home_recommand"
        android:text="@string/home_recommand"
        android:drawablePadding="8dp"
        android:textColor="@color/home_recommand"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="14sp"/>
</LinearLayout>